--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -6,7 +6,7 @@
 body {
     display: grid;
     height: 100vh;
-    grid-template: 1fr auto 2fr 1fr / 1fr 1fr 1fr auto;
+    grid-template: auto 2fr 1fr / 1fr 1fr 1fr auto;
 }
 
 header {
@@ -18,6 +18,10 @@ header {
     font-family: "Gowun Batang", serif;
     font-weight: 700;
     font-style: normal;
+}
+
+.header {
+    height: 100px;
 }
 
 nav {
