--- a/styles/base.css
+++ b/styles/base.css
@@ -7,7 +7,7 @@
 body {
     background: #d6cfcb;
     display: grid;
-    grid-template: auto 1fr 1fr / repeat(5, 1fr);
+    grid-template: auto 1fr auto / repeat(5, 1fr);
     height: 100vh;
     font-family: "Nunito", sans-serif;
     font-weight: 600;
