--- a/styles/base.css
+++ b/styles/base.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: #d6cfcb;
+    background: white;
     display: grid;
     grid-template: auto 1fr auto / repeat(5, 1fr);
     height: 100vh;
@@ -38,7 +38,8 @@ section {
 
 section h2:nth-child(1) {
     height: auto;
-    background: #598392;
+    background: #01161E;
+    color: white;
     text-align: center;
 }
 
@@ -60,8 +61,6 @@ section:nth-child(1) img {
     float: left;
     width: 200px;
 }
-
-
 
 section:nth-child(1) p {
     padding: 10px; 
