Week 3 HTML and CSS commit

--- a/styles/place.css
+++ b/styles/place.css
@@ -81,8 +81,8 @@ section table {
 }
 
 p a {
-    color: #ccc;
-    text-decoration: none;
+    color: white;
+    /* text-decoration: dotted; */
 }
 
 #attribution {
