--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -84,11 +84,15 @@ li {
     grid-column: 1 / 3;
 }
 
+img {
+    width: ;
+}
+
 .mobile {
     margin-top: 2rem;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 740px) {
     main {
         display: flex;
         flex-direction: column;
