--- a/styles/form.css
+++ b/styles/form.css
@@ -84,7 +84,8 @@ option:not(:first-child) {
 }
 
 .prf .asterisk {
-    color: red;
+    color: #000;
+    font-size: 1.5rem;
 }
 
 .prf input:required, .prf select:required {
