--- a/project/styles/main-small.css
+++ b/project/styles/main-small.css
@@ -1,5 +1,332 @@
-@media screen {
+* {
+    padding: 0;
+    margin: 0;
+}
+
+
+body {
+    background: #12110c;
+    color: #ffe;
+    font-family: "Montserrat", sans-serif;
+    width: 100%;
+    max-width: 760px;
+    margin: 0 auto;
+    position: relative;
+}
+
+h1 {
+    font-family: "Londrina Sketch", sans-serif;
+    letter-spacing: 3px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    padding-top: 5px;
+    /* min-width: 350px; */
+}
+
+main {
+    max-width: 760px;
+    padding: 10px;
+}
+
+header {
+    position: relative;
+    justify-content: space-around;
+    overflow-wrap: break-word;
+    height: 100px;
+    margin-bottom: 30px;
+    min-height: fit-content;
+}
+
+.logo {
+    height: 2rem;
+    padding: 5px;
     
 }
 
-/*  */
+.page-title {
+    text-align: center;
+    grid-column: 1 / 3;
+    margin-bottom: 0.75rem;
+    text-decoration: underline;
+}
+
+#green {
+    color: #48A9A6;
+}
+
+#red {
+    color: #E94F37;
+}
+
+#green, #red {
+    text-transform: uppercase;
+}
+
+.site-instr {
+    font-size: 0.7rem;
+    margin: 0.5rem 0;
+}
+
+a {
+    color: #ffe;
+    text-decoration: none;
+}
+
+a:hover {
+    border: 2px solid #ffe;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-top: 2px solid #ffe;
+    margin-top: 20px;
+    height: 50px;
+}
+
+a span {
+    background-color: #ffe;
+    color: #12110c;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+}
+
+a span:hover {
+    background-color: #12110c;
+    color: #ffe;
+}
+
+#hamburger::before {
+    content: "☰";
+    font-size: 1.5rem;
+    position: absolute;
+    right: 10px;
+    top: 5px;
+}
+
+#hamburger.show::before {
+    content: "X";
+    font-family: sans-serif;
+    font-size: 1.5rem;
+    position: absolute;
+    right: 10px;
+    top: 5px;
+}
+
+.nav-items li {
+    display: none;
+
+}
+
+.nav-items.show li {
+    display: block;
+}
+
+.nav-items a {
+    display: block;
+    padding: 0.5rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.nav-items.show li {
+    display: block;
+    text-align: center;
+}
+
+.title-cards {
+    display: flex;
+    flex-direction: column;
+}
+
+section {
+    width: 100%;
+    max-width: 300px;
+    height: 150px;
+    margin: 10px auto;
+    border: 2px solid #ffe;
+    position: relative;
+}
+
+section>a {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: inherit;
+    z-index: 1;
+    font-weight: 700;
+    font-size: 0.9rem;
+    text-shadow:
+        -1px -1px 0 black,
+        1px -1px 0 black,
+        -1px 1px 0 black,
+        1px 1px 0 black;
+    text-transform: uppercase;
+    font-family: "Arvo", serif;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    
+}
+
+section:hover {
+    color: #fee;
+    transform: scale(1.05);
+}
+
+header,
+footer {
+    height: 30px;
+    text-align: center;
+}
+
+#form-instr {
+    margin: 0.75rem 0;
+    font-style: italic;
+    font-size: 0.75rem;
+}
+
+.name-form input {
+    display: block;
+    padding: 0.8rem;
+    margin-bottom: 1rem;
+    border: 2px solid #48A9A6;
+}
+
+.name-form.disappear {
+    display: none;
+}
+
+#banner {
+    margin: 0 20%;
+}
+
+section img {
+    height: 100%;
+    width: 100%;
+}
+
+section {
+    position: relative;
+}
+
+section:nth-child(even)::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(72, 169, 166, 0.5);
+}
+
+section:nth-child(odd)::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(233, 79, 55, 0.4);
+}
+
+article.contact {
+    list-style-position: inside;
+    padding: 1rem 0.5rem 0 1rem;
+    color: #ffe;
+    grid-column: 1 / 3;
+    font-size: 1.05rem;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    height: 200px;
+}
+
+article.contact:last-child, article.study-plan:last-child, article.r-fs:last-child {
+    
+    margin-bottom: 2rem;
+}
+
+article.study-plan {
+    grid-column: 1 / 3;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+article.r-fs {
+    grid-column: 1 / 3;
+}
+
+/* main content */
+#content-box {
+    margin-bottom: 3rem;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    grid-template-columns: 1 / 3;
+}
+
+#content-box li {
+    padding: 5px;
+}
+
+
+article {
+    border: 2px solid #ffe;
+    list-style-position: inside;
+    padding: 0.5rem;
+    padding: 1rem;
+}
+
+article h3 {
+    padding-bottom: 0.5rem;
+}
+
+.nice h3 {
+    color: #48A9A6;
+}
+
+.must h3 {
+    color: #E94F37;
+}
+
+table {
+    padding-top: 1rem;
+}
+
+td {
+    padding-left: 1rem;
+}
+
+/* FAQ */
+#faq-section {
+    grid-column: 1 / 3;
+    margin-bottom: 2rem;
+}
+
+#faq-heading {
+    margin: 1rem 0;
+    font-size: 1rem;
+}
+
+#faq-section button {
+    width: 100%;
+    padding: 0.9rem;
+    font-size: 1rem;
+}
+
+.panel {
+    margin-bottom: 1rem;
+}
+
+
